@@ -95,6 +95,7 @@ router.get('/config.js', function (req, res) {
       maxReplicationFactor: internal.maxReplicationFactor,
       defaultReplicationFactor: internal.defaultReplicationFactor,
       maxNumberOfShards: internal.maxNumberOfShards,
+      maxNumberOfMoveShards: internal.maxNumberOfMoveShards,
       forceOneShard: internal.forceOneShard,
       sessionTimeout: internal.sessionTimeout,
       showMaintenanceStatus: true
