@@ -544,6 +544,9 @@
         },
         Shards: {
           route: '#shards'
+        },
+        "Rebalance Shards": {
+          route: '#rebalanceShards'
         }
       };
 
@@ -551,6 +554,8 @@
       if (disabled) {
         menus[activeKey].disabled = true;
       }
+      menus["Rebalance Shards"].disabled = window.App.userCollection.authOptions.ro; // when user can't edit database,
+                                                                                     // the tab is not clickable
       this.buildSubNavBar(menus, disabled);
     },
 
