@@ -6,6 +6,7 @@
 (function () {
   'use strict';
 
+  let isCurrentCoordinator = false;
   window.Router = Backbone.Router.extend({
     toUpdate: [],
     dbServers: [],
@@ -13,6 +14,7 @@
     foxxApiEnabled: undefined,
     statisticsInAllDatabases: undefined,
     lastRoute: undefined,
+    maxNumberOfMoveShards: undefined,
 
     routes: {
       '': 'cluster',
@@ -50,6 +52,7 @@
       'cluster': 'cluster',
       'nodes': 'nodes',
       'shards': 'shards',
+      'rebalanceShards': 'rebalanceShards',
       'maintenance': 'maintenance',
       'distribution': 'distribution',
       'node/:name': 'node',
@@ -215,6 +218,8 @@
         this.statisticsInAllDatabases = frontendConfig.statisticsInAllDatabases;
       }
 
+      this.maxNumberOfMoveShards = frontendConfig.maxNumberOfMoveShards;
+
       document.addEventListener('keyup', this.listener, false);
 
       // This should be the only global object
@@ -242,6 +247,7 @@
       this.initOnce = _.once(function () {
         const callback = function (error, isCoordinator) {
           if (isCoordinator === true) {
+           isCurrentCoordinator = true;
             self.coordinatorCollection.fetch({
               success: function () {
                 self.fetchDBS();
@@ -419,6 +425,32 @@
           dbServers: this.dbServers
         });
         this.shardsView.render();
+      });
+    },
+
+    rebalanceShards: function () {
+      this.checkUser();
+
+      this.init.then(() => {
+        if (this.isCluster === false || isCurrentCoordinator === false || this.maxNumberOfMoveShards === 0) {
+          this.routes[''] = 'dashboard';
+          this.navigate('#dashboard', { trigger: true });
+          return;
+        }
+        // this below is for when Rebalance Shards tab is not clickable, but user enters it through its URL
+        else if (this.userCollection.authOptions.ro) { // if user can't edit the database,
+                                                                                            // it goes back to the Overview page
+          this.routes[''] = 'nodes';
+          this.navigate('#nodes', { trigger: true });
+          return;
+        }
+        if (this.rebalanceShardsView) {
+          this.rebalanceShardsView.remove();
+        }
+        this.rebalanceShardsView = new window.RebalanceShardsView({
+          maxNumberOfMoveShards: this.maxNumberOfMoveShards
+        });
+        this.rebalanceShardsView.render();
       });
     },
 
