@@ -1,0 +1,10 @@
+<div class="arangoToolbar arangoToolbarTop" style="margin-bottom: 5px;" id="rebalanceShards">
+  <div class="pull-right">
+    <button id="rebalanceShardsBtn" style="margin-left: 10px;" class="button-warning">Rebalance Shards</button>
+  </div>
+  <div style="font-size: 10pt; margin-left: 10px; margin-top: 12px; font-weight: 200">
+    <b>WARNING:</b> Clicking this button will start a
+      shard rebalancing process and schedule up to <%= maxNumberOfMoveShards %> shards move operations,
+      which may cause background activity and increase the load in the cluster until finished.</div>
+</div>
+
