@@ -6,9 +6,6 @@
   </div>
   <div class="pull-right">
     <button id="toggleAllShards" class="button-success">Toggle all</button>
-    <% if (frontendConfig.db === '_system') { %>
-      <button id="rebalanceShards" style="margin-right: 10px;" class="button-warning">Rebalance Shards</button>
-    <% } %>
   </div>
 </div>
 
